--- a/About.html
+++ b/About.html
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-md-12 mp4-content">
                     <video width="480" height="320" controls>
-                        <source src="assets/raw/4 Tips Sukses Bisnis Pet Shop.mp4" type="video/mp4">
+                        <source src="https://www.youtube.com/watch?v=xEoi7oltQ4c" type="video/mp4">
                     </video>
                 </div>
             </div>
